--- a/src/index.html
+++ b/src/index.html
@@ -12,60 +12,60 @@
   </head>
   <body>
     <script type="text/javascript" src="./main.js"></script>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application"
-          method="post"
-          >
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
+    >
       <fieldset class="fieldset">
         <legend>Personal information</legend>
         <div class="form-field">
           <label>
           Surname:
 
-            <input type="text"
-                   name="surname"
-                   autocomplete="off"
-                   required
-                   >
+            <input
+              type="text"
+              name="surname"
+              autocomplete="off"
+              required
+            >
           </label>
         </div>
         <div class="form-field">
           <label>
           Name:
 
-            <input type="text"
-                   name="name"
-                   autocomplete="off"
-                   required
-                   >
+            <input
+              type="text"
+              name="name"
+              autocomplete="off"
+              required
+            >
           </label>
         </div>
         <div class="form-field">
           <label>
           How old are You?
 
-            <input type="number"
-                   name="age"
-                   value="12"
-                   min="1"
-                   max="100"
-                   >
+            <input
+              type="number"
+              name="age"
+              value="12"
+              min="1"
+              max="100"
+            >
           </label>
         </div>
         <div class="form-field">
           <label>
           Full date of birth:
 
-            <input type="date"
-                   name="date"
-                   >
+            <input type="date" name="date">
           </label>
         </div>
         <div class="form-field-last">
           <label>
             I accept the term of the agreement:
-            <input type="checkbox"
-                   name="agreement"
-                   >
+            <input type="checkbox" name="agreement">
           </label>
         </div>
       </fieldset>
@@ -75,20 +75,22 @@
           <label>
           E-mail:
 
-            <input type="email"
-                   name="email"
-                   placeholder="email@example.com"
-                   >
+            <input
+              type="email"
+              name="email"
+              placeholder="email@example.com"
+            >
           </label>
         </div>
         <div class="form-field-last">
           <label>
           Password:
 
-            <input type="password"
-                   id="password"
-                   name="password"
-                   >
+            <input
+              type="password"
+              id="password"
+              name="password"
+            >
           </label>
         </div>
       </fieldset>
@@ -98,16 +100,12 @@
           <label>
           Do you love cats?
             <label>
-              <input type="radio"
-                     name="yes"
-                     >
+              <input type="radio" name="yes">
               Yes
             </label>
             <label>
 
-              <input type="radio"
-                     name="no"
-                     >
+              <input type="radio" name="no">
               No
             </label>
           </label>
@@ -116,38 +114,37 @@
           <label>
           What is your favorite color?
 
-            <input type="color"
-                   name="color"
-                   value="#000"
-                   >
+            <input
+              type="color"
+              name="color"
+              value="#000"
+            >
           </label>
         </div>
         <div class="form-field">
           <label>
             What time do you go to bed?
-            <input type="time"
-                   name="time">
+            <input type="time" name="time">
           </label>
         </div>
         <div class="form-field">
           <label>
           What are your favorite brand of cars?
-            <select multiple
-                    name="cars"
-                    >
+            <select multiple name="cars">
               <option>BMW</option>
               <option>Audi</option>
               <option>Lada</option>
             </select>
           </label>
         </div>
-        <div class="form-field-last">
+        <div class="form-field">
           <label>
           How do you rate our work?
-            <input type="range"
-                   name="range"
-                   value="0"
-                   >
+            <input
+              type="range"
+              name="range"
+              value="0"
+            >
           </label>
         </div>
 
@@ -158,11 +155,12 @@
           <label>
          Comments:
 
-            <textarea name="comments"
-                      minlength="5"
-                      maxlength="50"
-                      autocomplete="off"
-          ></textarea>
+            <textarea
+              name="comments"
+              minlength="5"
+              maxlength="50"
+              autocomplete="off"
+            ></textarea>
           </label>
         </div>
         <div class="form-field-last">
